# learning-rust

apiplay/: Cargo.toml
apiplay/src/: config.rs  lib.rs  main.rs  state.rs
chat-app/: Cargo.toml
chat-app/src/: main.rs
chat-app/static/: style.css
chat-tokio-stream/: Cargo.toml
chat-tokio-stream/src/: main-echo-server.rs  main.rs
clock/: Cargo.toml
clock/src/: main.rs
echo-play/echo-client-tokio/: Cargo.toml
echo-play/karin/: Cargo.toml
echo-play/sirocco/: Cargo.toml
graphql-server/: Cargo.toml
graphql-server/src/: main.rs
graphql-server/src/schema/: health.rs  mod.rs
graphql-server/src/server/: mod.rs  routes.rs
guessing_game/src/: main.rs
kafka_consumer/: Cargo.toml
kafka_consumer/src/: main.rs
kafka_producer/: Cargo.toml
kafka_producer/src/: main.rs
mining-pool-api/: Cargo.toml
mining-pool-api/src/: main.rs  miner.rs  miner_controller.rs  schema.rs  util.rs  wallet.rs  wallet_controller.rs
my-api/: Cargo.toml  Makefile.toml
my-api/migrations/: 20221022045227_init.sql
my-api/src/: health.rs  main.rs  repository.rs
pitfall/: Cargo.toml
rocket-intro/: Cargo.toml
rocket-intro/src/: main.rs
rocket-intro/templates/: index.html.hbs
rust-actix-postgres-sqlx/: Cargo.toml
rust-actix-postgres-sqlx/src/: main.rs  services.rs
rust-crash-course/myapp/: Cargo.toml
rust-deno-ffi/: Cargo.toml  main.ts
rust-diesel-orm/: .env.example  Cargo.toml
rust_tutorial_derek_banas/: Cargo.toml
rusty-journal/: Cargo.toml  test-journal.json
simple-http-server/: Cargo.toml
todo-list-api/: Cargo.toml
yew-starter/: Cargo.toml
(+45 files in other folders)
