[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.68"
warp = "0.3.1"
async-graphql = "2.10.3"
async-graphql-warp = "2.10.3"